GNOME Bugzilla – Bug 673666
e-file-helpers: catch GErrors in switch_temp_file
Last modified: 2012-04-11 15:43:59 UTC
Instead of the broad messages we now print.
Created attachment 211511 [details] [review] e-file-helpers: catch GErrors in switch_temp_file The GFile API provides useful error messages, print them when any operation fails to aid debugging.
Review of attachment 211511 [details] [review]: I think you need to reset the errors to NULL again if you are going to reuse them, otherwise you'll get errors if they are actually triggered. Othen than that, fine.
Attachment 211511 [details] pushed as 9757561 - e-file-helpers: catch GErrors in switch_temp_file