e-file-helpers: catch GErrors in switch_temp_file

The GFile API provides useful error messages, print them when any
operation fails to aid debugging.

https://bugzilla.gnome.org/show_bug.cgi?id=673666